--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,7 +66,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -264,6 +263,7 @@ allow 185.129.62.63;
 allow 185.130.47.58;
 allow 185.132.53.250;
 allow 185.132.53.6;
+allow 185.14.31.113;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -472,6 +472,7 @@ allow 185.247.184.33;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
+allow 185.28.47.6;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.39.207.83;
@@ -1029,7 +1030,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1239,6 +1239,7 @@ allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
 allow 2a02:4780:2d:ea47::1;
+allow 2a02:4840:1:4::5;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
 allow 2a02:c204:2195:2012::1;
@@ -1288,7 +1289,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:78fc::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1835,7 +1835,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.109;
-allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1868,6 +1867,7 @@ allow 5.45.98.162;
 allow 57.128.220.107;
 allow 57.129.91.235;
 allow 5.8.18.46;
+allow 5.8.18.99;
 allow 62.171.137.169;
 allow 62.182.84.146;
 allow 62.72.47.105;
@@ -1903,7 +1903,6 @@ allow 80.94.92.92;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
-allow 8.211.1.212;
 allow 82.153.138.125;
 allow 82.153.138.241;
 allow 82.221.128.191;
@@ -1935,6 +1934,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
